# api/src/search/type/search-release-media.type.ts
@@ -1,0 +1,15 @@
+import { ApiProperty } from "@nestjs/swagger";
+import { SearchReleaseTrack } from "./search-release-track.type";
+
+export class SearchReleaseMedia {
+	@ApiProperty({
+		type: String,
+		nullable: true,
+	})
+	format: string | null;
+
+	@ApiProperty({
+		type: [SearchReleaseTrack],
+	})
+	tracks: SearchReleaseTrack[];
+}
